new files during training

--- a/1-policy-user-host.yml
+++ b/1-policy-user-host.yml
@@ -9,5 +9,7 @@
       id: username
     - !variable
       id: password
+    - !variable
+      id: secret1
     - !group
       id: upt-policy1-group
